# Diffusion-based-Tabular-Data-Synthesis

./: .amlignore  .coverage  .gitignore  Analytics.ipynb  Azure Pipeline.ipynb  Azure.ipynb  README.md  Readme2.md  agg_results.ipynb  environment.yml  environment_azure.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  tests.yml
CTAB-GAN/: pipeline_ctabgan.py  train_sample_ctabgan.py  tune_ctabgan.py
CTAB-GAN-Plus/: pipeline_ctabganp.py  train_sample_ctabganp.py  tune_ctabgan.py
CTAB-GAN/model/: ctabgan.py
CTGAN/: pipeline_tvae.py  train_sample_tvae.py  tune_tvae.py
exp/adult/: config.toml
exp/adult-bgm/: config.toml
exp/adult-bgm/check/: config.toml
lib/: data.py  util.py
scripts/: data_postprocess.py  data_preprocess.py  eval_catboost.py  eval_mlp.py  eval_seeds.py  eval_seeds_simple.py  eval_similarity.py  eval_simple.py  eval_statistics.py  example_file.py  pipeline.py  produce_plots.py  resample_privacy.py  sample.py  train.py  tune_ddpm.py  tune_evaluation_model.py  utils_train.py
src/tabsynth/: Analytics.ipynb
src/tabsynth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tab_ddpm/: gaussian_multinomial_diffsuion.py
tabsyndex/: table_evaluator_fix.py  tabsyndex.py
tabular_processing/: bgm_processor.py  dataset.py  ft_processor.py  identity_processor.py  tabular_data_controller.py  tabular_processor.py  tabular_transformer.py
tabular_processing/bgm_processing/: bgm_transformer.py
tabular_processing/bgm_utils/: data_preparation.py  transformer.py
tests/: test_ft_processor.py  test_hello.py  utils.py
(+86 files in other folders)
