[metadata]
name = tabsynth
description = A package for diffusion based tabular data synthesis
author = Sven Groen
license = MIT
version = 0.0.0
long_description = file: README.md
platforms = windows
classifiers =
    "Programming Language :: Python :: 3.9.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
packages = tabsynth
install_requires=
    numpy==1.21.4
    torch==1.10.1
    pandas==1.5.2
    scikit-learn==1.0.2
    dython==0.5.1
    catboost==1.0.3
    optuna==2.10.1
    scipy==1.7.2
    tqdm==4.62.3
    table_evaluator==1.4.2

python_requires = >=3.9.7
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9


[options.package_data]
tabsynth = py.typed

[flake8]
max-line-length = 160